--- a/prueba1.html
+++ b/prueba1.html
@@ -23,6 +23,7 @@
    <body>
 	<h1>titulo1   </h1> 
 	   <h2>titulo2   </h2> 
+	   <h4>titulo4   </h4>
    	Hellooooooo
    	test 1
 	<div id="prueba">
